Update README with install instructions